--- a/envtejas/.gitignore
+++ b/envtejas/.gitignore
@@ -1,10 +1,2 @@
-# Ignore the environment configuration file
-/envtejas
-
-# Ignore specific files
-contacts.csv
-tejas.db
-
-# Ignore the __pycache__ directory
-/engine/__pycache__
-/engine/cookies.json
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
